--- a/Practice/Practice.ipynb
+++ b/Practice/Practice.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -103,8 +103,7 @@
    "source": [
     "app = pd.read_csv('googleplaystore.csv')\n",
     "apps = app.drop(['Reviews', 'Size', 'Installs', 'Type', 'Price','Content Rating','Genres', 'Last Updated',\n",
-    "            'Current Ver', 'Android Ver'], axis=1)\n",
-    "onehots = "
+    "            'Current Ver', 'Android Ver'], axis=1)"
    ]
   },
   {
@@ -205,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -223,7 +222,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "087b116987f9474e9da6a63153aa826f",
+       "model_id": "c93d905ce63a4e03969f9a33474c6193",
        "version_major": 2,
        "version_minor": 0
       },
@@ -240,7 +239,7 @@
        "<function __main__.my_function(x)>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 7,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -462,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
